--- a/literature.html
+++ b/literature.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <div class="rightcolumn">
 	<div class="stories">
  	 {% for story in site.stories %}
@@ -15,4 +18,4 @@
 	</div>
     </div>
     
-
+</html>
