--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ published: true
       </article>
 </div>
 
+  <div class="row">
   <div class="rightcolumn">
 <article class="posts">
  	 {% for post in site.posts %}
@@ -36,5 +37,4 @@ published: true
   {% endfor %}
      </article>
 </div>
-
-
+</div>
