--- a/literature.html
+++ b/literature.html
@@ -1,4 +1,6 @@
-<div class="rightcolumn">
+<!DOCTYPE html>
+<html> 
+  <div class="rightcolumn">
 	<div class="stories">
  	 {% for story in site.stories %}
     <article class="story">
@@ -13,5 +15,5 @@
     </article>
   {% endfor %}
 	</div>
-    </div>
+    </div> </html>
     
